--- a/src/components/createAccount/CreateAccount.css
+++ b/src/components/createAccount/CreateAccount.css
@@ -28,6 +28,19 @@
   z-index: 0;
 }
 
+.cyber-bg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100vw;
+  min-height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  pointer-events: none;
+  opacity: 0.4;
+}
+
 @keyframes rotateGrid {
   from {
     transform: rotate(0deg);
