--- a/src/components/createAccount/CreateAccount.css
+++ b/src/components/createAccount/CreateAccount.css
@@ -40,7 +40,7 @@
   z-index: 0;
   min-width: 100vw;
   min-height: 100vh;
-  object-fit: cover;
+  object-fit: contain;
   pointer-events: none;
   opacity: 0.4;
 }
